--- a/tabel-2.html
+++ b/tabel-2.html
@@ -5,9 +5,9 @@
   <title>Youtube</title>
 </head>
 <body>
-  <table border="1" bordercolor="black" width="900" height="700">
+  <table border="1" bordercolor="black" width="60%" height="700">
     <tr>
-      <td rowspan="3" width="550" height="500"><embed src= "https://www.youtube.com/embed/cwQgjq0mCdE" frameborder="0" width="550" height="450"></embed></td>
+      <td rowspan="3" width="550" height="500"><embed src= "https://www.youtube.com/embed/cwQgjq0mCdE" frameborder="0" width="100%" height="100%"></embed></td>
       <td> <a href="https://www.youtube.com/watch?v=wPBAemjWkOc">
          <img src="https://i.ytimg.com/vi/wPBAemjWkOc/hqdefault.jpg?sqp=-oaymwEiCKgBEF5IWvKriqkDFQgBFQAAAAAYASUAAMhCPQCAokN4AQ==&rs=AOn4CLABQY3YJTb_bYfMjtpt2__pxcCI6g"/></a></td>
       <td><a href="https://www.youtube.com/watch?v=wPBAemjWkOc">
