--- a/create-account-form.html
+++ b/create-account-form.html
@@ -24,6 +24,10 @@ Create an account
 
     </td>
     <td bgcolor="Wheat" align="center">
+      <label>
+      <input type="checkbox" name="name" value=""> <a href="terms.html">I Agree with terms!</a>
+    </label>
+      <hr color="black"/>
     <button type="button" name="button">
       <br/>
       Register
