--- a/create-account-form.html
+++ b/create-account-form.html
@@ -18,7 +18,12 @@ Create an account
 <br/>
 <table border="1" bordercolor="black" align="center" width="800" >
   <tr>
-    <td bgcolor="SpringGreen">a</td>
+    <td bgcolor="SpringGreen">
+      <label >
+        <input type="name" name="" value="" placeholder="Username">Username
+        <input type="password" name="" value="" placeholder="Password">Password
+      </label>
+    </td>
     <td bgcolor="Wheat" width="50%">
     <textarea cols="50" rows="8" placeholder="descrie-te..."></textarea>
 
