--- a/product-form.html
+++ b/product-form.html
@@ -21,9 +21,9 @@
       <form action="https://www.straus.md/en/">
         <input list="optiuni" type="text" name="query" value="" placeholder="Search" size="50" autofocus>
         <datalist id="optiuni">
-          <option value="burger">
-          <option value="pizza">
-          <option value="kebab">
+          <option value="burger"></option>
+          <option value="pizza"></option>
+          <option value="kebab"></option>
 
         </datalist>
         <button type="button" name="button">Search</button>
