--- a/product-form.html
+++ b/product-form.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>&#10092;Product Form&#10093;</title>
+  <link href="first.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
   <!-- Facebook -->
@@ -17,25 +18,25 @@
 <!-- Facebook  -->
 <table align="center" cellpadding="15">
 <tr>
-  <td colspan="2" bgcolor="lightgrey">
+  <td id="a1" colspan="2" bgcolor="lightgrey">
       <form action="https://www.straus.md/en/">
-        <input list="optiuni" type="text" name="query" value="" placeholder="Search" size="50" autofocus>
+        <input id="cautare" list="optiuni" type="text" name="query" value="" placeholder="Search" size="50" autofocus>
         <datalist id="optiuni">
           <option value="burger"></option>
           <option value="pizza"></option>
           <option value="kebab"></option>
 
         </datalist>
-        <button type="button" name="button">Search</button>
+        <button id="but" type="button" name="button">Search</button>
       </form>
   </td>
 </tr>
   <tr>
 
-    <td><img src="https://straus.s3.amazonaws.com/media/products2/6284_big.jpg?version=1508137630" alt=""></td>
-    <td bgcolor="lightblue">
+    <td id="a2"><img src="https://straus.s3.amazonaws.com/media/products2/6284_big.jpg?version=1508137630" alt=""></td>
+    <td id="a3" bgcolor="lightblue">
       <form>
-          <h1>Dublu cheeseburger</h1>
+          <h1 id="A1">Dublu cheeseburger</h1>
             <hr color="black">
             <h2>Ingredients:</h2>
           <ol type="A">
