--- a/inline.html
+++ b/inline.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+    <!DOCTYPE html>
     <html lang="en">
     <head>
     <meta charset="UTF-8">
     <title>Document</title>
     </head>
-    <body style="background-color: brown;">
+    <body style="background-color: lightSkyblue;">
 
     <h1 style="background-color: white; color:red; font-size: 100px;">Inline <small>CSS</small></h1>
 
