--- a/inline2.html
+++ b/inline2.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <style>
+
+    p{
+        background-color: white;
+        color:red;
+    }
+
+
+
+    </style>
     <meta charset="UTF-8">
     <title>Document</title>
 </head>
@@ -8,5 +18,8 @@
     <h1 style="background-color: #00cc66 ; color: #ccff33 ; padding: 50px ; padding-top:100px;">Inline<br/>
     <small style="color: #f2ffcc ; font-size: 15px ; padding-left:55px;">Css</small>
     </h1>
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet incidunt, nulla ea.
+    </p>
 </body>
 </html>
