--- a/player.html
+++ b/player.html
@@ -19,6 +19,15 @@
         border-radius: 10px;
         padding: 20px;
     }
+    .first{
+        border-radius: 100px 0 0 100px;
+    }
+    .second{
+        border-radius: 20px;
+    }
+    .third{
+        border-radius: 0 100px 100px 0;
+    }
 
 
     </style>
@@ -29,9 +38,9 @@
     <iframe width="720" height="560" src="https://www.youtube.com/embed/tD99WhUKJR4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <div>
 
-    <button>prev</button>
-    <button>play</button>
-    <button>next</button>
+    <button class="first">prev</button>
+    <button class="second">play</button>
+    <button class="third">next</button>
 
 </div>
 </div>
