--- a/player.html
+++ b/player.html
@@ -28,6 +28,9 @@
     .third{
         border-radius: 0 100px 100px 0;
     }
+    button:active{
+        border-color: black;
+    }
 
 
     </style>
