--- a/article-style.html
+++ b/article-style.html
@@ -3,26 +3,66 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <style media="screen">
+        body{
+            background-color: lightgrey;
+        }
+        article{
+            background-color: white;
+            width: 70%;
+            margin-left: 15%;
+            text-align: center;
+            min-width: 600px;
+            margin-top: 100px;
+
+        }
+        h1{
+            text-align: center;
+            padding: 5%;
+        }
+        #main{
+            width: 100%;
+        }
+        section{
+        width: 70%;
+        margin-left: 15%;
+        background-color: white;
+        margin-top: 50px;
+        min-width: 600px;
+        }
+        .news{
+            border-bottom: 1px solid grey;
+            margin-bottom: 50px;
+        }
+        .link{
+            text-align: center;
+        }
+
+    </style>
 </head>
 <body>
 
+    <article>
+    <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente, eaque?</h1>
+    <img id="main" src="http://picsum.photos/600/300/?image=214" alt="http://picsum.photos/600/300/?image=214" />
+    </article>
 
     <section>
         <!-- div*3+h2+p -->
-        <div>
+        <div class="news">
             <img src="http://picsum.photos/400/300/?image=25" alt="http://picsum.photos/400/300/?image=25">
             <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, nostrum.</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid placeat dolore assumenda, consectetur eius hic, quaerat, sed eos suscipit non possimus repudiandae! Similique reiciendis ex voluptas. Eveniet sunt quia accusamus.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid placeat dolore assumenda, consectetur eius hic, quaerat, sed eos suscipit non possimus repudiandae! Similique reiciendis ex voluptas. Eveniet sunt quia accusamus.</p> <p class="link"><a href="">Citeste Mai departe &#8658;</a></p>
         </div>
-        <div>
+        <div class="news">
             <img src="http://picsum.photos/400/300/?image=65" alt="http://picsum.photos/400/300/?image=65">
             <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta, quis.</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad assumenda illum, nam rem, praesentium fugiat sunt quas quod repudiandae recusandae ipsum itaque vel facilis esse nulla voluptatem ipsam? Accusantium, doloribus!</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad assumenda illum, nam rem, praesentium fugiat sunt quas quod repudiandae recusandae ipsum itaque vel facilis esse nulla voluptatem ipsam? Accusantium, doloribus!</p><p class="link"><a href="">Citeste Mai departe &#8658;</a></p>
         </div>
-        <div>
+        <div class="news">
             <img src="http://picsum.photos/400/300/?image=75" alt="http://picsum.photos/400/300/?image=75">
             <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde, rerum, id. Eligendi veritatis eveniet nemo!</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente voluptatem voluptatum cumque quibusdam culpa quod pariatur officiis laboriosam deserunt, praesentium itaque, dolorum vero minima harum nisi. Inventore dolores, corrupti quisquam?</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente voluptatem voluptatum cumque quibusdam culpa quod pariatur officiis laboriosam deserunt, praesentium itaque, dolorum vero minima harum nisi. Inventore dolores, corrupti quisquam?</p><p class="link"><a href="">Citeste Mai departe &#8658;</a></p>
         </div>
     </section>
 
