--- a/article-style.html
+++ b/article-style.html
@@ -33,9 +33,26 @@
         .news{
             border-bottom: 1px solid grey;
             margin-bottom: 50px;
+            height: 300px;
+            padding-right: 50px;
+
         }
         .link{
-            text-align: center;
+            text-align: right;
+        }
+        a{
+            color: lightskyblue;
+        }
+        span.arrow{
+            color: blue;
+        }
+        .medium{
+            float: left;
+            margin-right: 50px;
+        }
+
+        h2{
+        padding-top: 50px;
         }
 
     </style>
@@ -50,19 +67,19 @@
     <section>
         <!-- div*3+h2+p -->
         <div class="news">
-            <img src="http://picsum.photos/400/300/?image=25" alt="http://picsum.photos/400/300/?image=25">
+            <img class="medium" src="http://picsum.photos/400/300/?image=25" alt="http://picsum.photos/400/300/?image=25">
             <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, nostrum.</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid placeat dolore assumenda, consectetur eius hic, quaerat, sed eos suscipit non possimus repudiandae! Similique reiciendis ex voluptas. Eveniet sunt quia accusamus.</p> <p class="link"><a href="">Citeste Mai departe &#8658;</a></p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid placeat dolore assumenda, consectetur eius hic, quaerat, sed eos suscipit non possimus repudiandae! Similique reiciendis ex voluptas. Eveniet sunt quia accusamus.</p> <p class="link"><a href="">Citeste Mai departe <span class="arrow"> &#8658;</span></a></p>
         </div>
         <div class="news">
-            <img src="http://picsum.photos/400/300/?image=65" alt="http://picsum.photos/400/300/?image=65">
+            <img class="medium" src="http://picsum.photos/400/300/?image=65" alt="http://picsum.photos/400/300/?image=65">
             <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta, quis.</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad assumenda illum, nam rem, praesentium fugiat sunt quas quod repudiandae recusandae ipsum itaque vel facilis esse nulla voluptatem ipsam? Accusantium, doloribus!</p><p class="link"><a href="">Citeste Mai departe &#8658;</a></p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad assumenda illum, nam rem, praesentium fugiat sunt quas quod repudiandae recusandae ipsum itaque vel facilis esse nulla voluptatem ipsam? Accusantium, doloribus!</p><p class="link"><a href="">Citeste Mai departe <span class="arrow">&#8658;</span></a></p>
         </div>
         <div class="news">
-            <img src="http://picsum.photos/400/300/?image=75" alt="http://picsum.photos/400/300/?image=75">
+            <img class="medium" src="http://picsum.photos/400/300/?image=75" alt="http://picsum.photos/400/300/?image=75">
             <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde, rerum, id. Eligendi veritatis eveniet nemo!</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente voluptatem voluptatum cumque quibusdam culpa quod pariatur officiis laboriosam deserunt, praesentium itaque, dolorum vero minima harum nisi. Inventore dolores, corrupti quisquam?</p><p class="link"><a href="">Citeste Mai departe &#8658;</a></p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente voluptatem voluptatum cumque quibusdam culpa quod pariatur officiis laboriosam deserunt, praesentium itaque, dolorum vero minima harum nisi. Inventore dolores, corrupti quisquam?</p><p class="link"><a href="">Citeste Mai departe<span class="arrow"> &#8658;</span></a></p>
         </div>
     </section>
 
