--- a/article-style.html
+++ b/article-style.html
@@ -43,6 +43,10 @@
         a{
             color: lightskyblue;
         }
+        a:hover{
+            color: red;
+        }
+
         span.arrow{
             color: blue;
         }
