--- a/pseudo.html
+++ b/pseudo.html
@@ -18,7 +18,10 @@
         border: 0;
         background-color: inherit;
         border-bottom: 1px solid white;
-
+    }
+    input:focus{
+    width: 600px;
+    /*fa click pe search*/
 
     }
 
