--- a/pseudo.html
+++ b/pseudo.html
@@ -18,10 +18,12 @@
         border: 0;
         background-color: inherit;
         border-bottom: 1px solid white;
+        transition: 2s;
+        width: 100px;
     }
     input:focus{
     width: 600px;
-    /*fa click pe search*/
+    /*click pe search*/
 
     }
 
