--- a/complex.html
+++ b/complex.html
@@ -19,9 +19,7 @@
          width: 180px;
          height: 180px;
          float: left;
-
      }
-
     body>div>div>div{
         background-color: blue;
         margin: 5px;
@@ -41,12 +39,18 @@
     body>div>div:last-child>div:first-child{
         background-color: red;
     }
+    /*urmatoarele 4*/
+    body>div>div:nth-child(2)>div:nth-child(2){
+        background-color: red;
+    }
     body>div>div:nth-child(2)>div:nth-child(3){
         background-color: red;
     }
-    body+div+div+div+div+div{
+    body>div>div:nth-child(3)>div:nth-child(3){
         background-color: red;
-        color:red;
+    }
+    body>div>div:nth-child(3)>div:nth-child(2){
+        background-color: red;
     }
     </style>
 
