--- a/preloader.html
+++ b/preloader.html
@@ -28,6 +28,7 @@
     left: 7px;
     top: 7px;
     border-radius: 50%;
+    animation: rot 5s;
   }
   #preloader .dot{
     width: 5px;
@@ -39,6 +40,10 @@
     left:-7px;
     border: 3px solid #333;
 
+  }
+  @keyframes rot{
+    from{ transform: rotate(0deg);}
+     to{transform: rotate(360deg);}
   }
 </style>
 </head>
