--- a/preloader2.html
+++ b/preloader2.html
@@ -57,13 +57,9 @@
 <body>
 <div id="preloader">
   <div class="box">
-    <div class="curve-dark">
-
-    </div>
-    <div class="curve-light">
-
-    </div>
-
+    <div class="curve-dark"></div>
+    <div class="curve-light"></div>
+    <div class="square"></div>
   </div>
 </div>
 
