--- a/index.html
+++ b/index.html
@@ -2,17 +2,27 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Exemplu Cu stiluri Externe</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="icon" href="http://icons.iconarchive.com/icons/musett/coffee-shop/128/Beer-icon.png">
+  <title>Document</title>
+<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css" integrity="sha256-gvEnj2axkqIj4wbYhPjbWV7zttgpzBVEgHub9AAZQD4=" crossorigin="anonymous" />pentru securitate -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css" integrity="sha256-gvEnj2axkqIj4wbYhPjbWV7zttgpzBVEgHub9AAZQD4=" crossorigin="anonymous" />
+  <link rel="stylesheet" href="menu.css">
 </head>
 <body>
-<h1>
-  Stiluri Externe
-</h1>
-<ul>
-  <li>Avem o pagina <span>"index.html"</span></li>
-  <li>Avem un fisier <span>"style.css"</span></li>
-</ul>
+<nav>
+  <ul>
+    <li><a href="">Lorem.</a></li>
+    <li><a href="">Est.</a></li>
+    <li><a href="">Doloribus.</a></li>
+    <li><a href="">Architecto!</a></li>
+    <li><a href="">Non?</a></li>
+    <li><a href="">Cumque!</a></li>
+    <li><a href="">Est!</a></li>
+    <li><a href="">Consequuntur.</a></li>
+    <li><a href="">Sint.</a></li>
+    <li class="burger"><a href=""><span></span>
+    <span></span>
+    <span></span></a></li>
+  </ul>
+</nav>
 </body>
 </html>
