--- a/firstJS.html
+++ b/firstJS.html
@@ -42,7 +42,7 @@ suma_mdl=suma_mdl * (1-comision);   // 100% - 2%
  var suma_usd=suma_mdl / usd_2_mdl;
 
  var suma_eur=suma_mdl / eur_2_mdl;
- alert("USD" + suma_usd);
- alert("EUR" + suma_eur);
+ alert("USD:" + suma_usd);
+ alert("EUR:" + suma_eur);
 
 </script>
